--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
         "stylelint-scss": "^3.17.2",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1"
     }
 }
