--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "build": "webpack"
     },
     "repository": {
@@ -19,18 +19,22 @@
     },
     "homepage": "https://github.com/UmairAhmad125/to-do-list#readme",
     "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
         "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.2",
         "css-loader": "^5.0.1",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-plugin-import": "^2.20.2",
         "file-loader": "^6.2.0",
+        "jest": "^26.6.3",
         "style-loader": "^2.0.0",
         "stylelint": "^13.3.3",
         "stylelint-config-standard": "^20.0.0",
         "stylelint-csstree-validator": "^1.9.0",
         "stylelint-scss": "^3.17.2",
-        "webpack": "^5.11.0",
+        "webpack": "^5.11.1",
         "webpack-cli": "^4.2.0"
     },
     "dependencies": {
